--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "no-gas-slaps-telegram",
   "version": "1.0.0",
@@ -7,17 +6,21 @@
   "type": "module",
   "scripts": {
     "start": "node server/server.js",
-    "dev": "node server/server.js"
+    "dev": "node server/server.js",
+    "build": "esbuild server/server.js --bundle --platform=node --format=esm --outfile=dist/server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "socket.io": "^4.7.4",
-    "telegraf": "^4.15.6",
-    "node-telegram-bot-api": "^0.63.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "node-telegram-bot-api": "^0.63.0",
+    "socket.io": "^4.7.4",
+    "telegraf": "^4.15.6"
   },
   "engines": {
     "node": ">=18.0.0"
+  },
+  "devDependencies": {
+    "esbuild": "^0.25.10"
   }
 }
